--- a/styles.css
+++ b/styles.css
@@ -1,29 +1,57 @@
 @font-face {
-    font-family: Julius;
-    src: url(fonts/julius.ttf);
+    font-family: NovaMono;
+    src: url(fonts/NovaMono.ttf);
 }
 
 body {
     margin: 0;
-    font-family: Julius;
+    font-family: NovaMono;
+    background-color: #000;
+
+    // Disable text selection
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 canvas {
     vertical-align: middle;
 }
 
-#text {
+#screen {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     position: fixed;
-    color: white;
     left: 0;
     right: 0;
     top: 0;
     bottom: 0;
-    font-size: 15vw;
     transition: opacity 1s;
+    color: white;
+    cursor: pointer;
+}
+
+#title {
+    font-size: 15vw;
+}
+
+#title > span:nth-of-type(1) { color: #fde6d0; }
+#title > span:nth-of-type(2) { color: #fddbb3; }
+#title > span:nth-of-type(3) { color: #eba69d; }
+#title > span:nth-of-type(4) { color: #c7676f; }
+#title > span:nth-of-type(5) { color: #8f3b50; }
+#title > span:nth-of-type(6) { color: #441833; }
+
+#start {
+    font-size: 5vw;
+    border: 2px solid white;
+    padding: 0 10px;
+    background-color: rgba(255, 255, 255, .15);
 }
 
 .transparent {
