--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,10 @@
     src: url(fonts/NovaMono.ttf);
 }
 
+html, body {
+    height: 100%;
+}
+
 body {
     margin: 0;
     font-family: NovaMono;
@@ -11,7 +15,7 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 
-    // Disable text selection
+    /* Disable text selection */
     -webkit-touch-callout: none;
     -webkit-user-select: none;
     -khtml-user-select: none;
@@ -22,11 +26,9 @@ body {
 
 canvas {
     vertical-align: middle;
-
-    // Needed for OSX Safari
-    min-height: 100%;
+    width: 100%;
+    height: 100%;
 }
-
 
 #screen {
     display: flex;
