--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@ body {
     font-family: NovaMono;
     text-transform: uppercase;
     background-color: #000;
+    font-size: 30px;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 
@@ -30,40 +31,41 @@ canvas {
     height: 100%;
 }
 
-#screen {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    position: fixed;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    transition: opacity 1s;
-    color: white;
-    cursor: pointer;
-}
-
-#title {
-    font-size: 100px;
-    line-height: 110px;
-}
-
-#title > span:nth-of-type(1) { color: #fde6d0; }
-#title > span:nth-of-type(2) { color: #fddbb3; }
-#title > span:nth-of-type(3) { color: #eba69d; }
-#title > span:nth-of-type(4) { color: #c7676f; }
-#title > span:nth-of-type(5) { color: #8f3b50; }
-#title > span:nth-of-type(6) { color: #441833; }
-
-#loading, #play {
-    font-size: 30px;
+#gameOverScreen {
+    display: none;
 }
 
 #play {
     display: none;
 }
+
+.screen {
+    width: 100%;
+    height: 180px;
+    top: 50%;
+    margin-top: -90px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    transition: opacity 1s;
+    color: white;
+    cursor: pointer;
+    background-color: #000;
+}
+
+.title {
+    font-size: 90px;
+    line-height: 100px;
+}
+
+.title > span:nth-of-type(1) { color: #fde6d0; }
+.title > span:nth-of-type(2) { color: #fddbb3; }
+.title > span:nth-of-type(3) { color: #eba69d; }
+.title > span:nth-of-type(4) { color: #c7676f; }
+.title > span:nth-of-type(5) { color: #8f3b50; }
+.title > span:nth-of-type(6) { color: #441833; }
 
 .transparent {
     opacity: 0;
