--- a/styles.css
+++ b/styles.css
@@ -27,8 +27,8 @@ body {
 
 canvas {
     vertical-align: middle;
-    width: 100%;
-    height: 100%;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 #gameOverScreen {
