--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ canvas {
     max-height: 100%;
 }
 
-#gameOverScreen {
+#gameOver {
     display: none;
 }
 
@@ -39,11 +39,18 @@ canvas {
     display: none;
 }
 
-.screen {
+#score {
+    font-size: 20px;
+    color: #555;
+    margin-top: 20px;
+    visibility: hidden;
+}
+
+#screen {
     width: 100%;
-    height: 180px;
+    height: 240px;
     top: 50%;
-    margin-top: -90px;
+    margin-top: -120px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -55,17 +62,17 @@ canvas {
     background-color: #000;
 }
 
-.title {
+#title {
     font-size: 90px;
     line-height: 100px;
 }
 
-.title > span:nth-of-type(1) { color: #fde6d0; }
-.title > span:nth-of-type(2) { color: #fddbb3; }
-.title > span:nth-of-type(3) { color: #eba69d; }
-.title > span:nth-of-type(4) { color: #c7676f; }
-.title > span:nth-of-type(5) { color: #8f3b50; }
-.title > span:nth-of-type(6) { color: #441833; }
+#title > span:nth-of-type(1) { color: #fde6d0; }
+#title > span:nth-of-type(2) { color: #fddbb3; }
+#title > span:nth-of-type(3) { color: #eba69d; }
+#title > span:nth-of-type(4) { color: #c7676f; }
+#title > span:nth-of-type(5) { color: #8f3b50; }
+#title > span:nth-of-type(6) { color: #441833; }
 
 .transparent {
     opacity: 0;
